k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-lcm
  labels:
    app: lcm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lcm
  template:
    metadata:
      labels:
        app: lcm
    spec:
      serviceAccountName: k8s-lcm
      containers:
      - name: lcm
        image: arminc/lcm:0.12.0
        imagePullPolicy: IfNotPresent
        args:
            - --config=/custom/config.yaml
            - --server
        livenessProbe:
          httpGet:
            path: /
            port: 7321
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 7321
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 7321
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /custom
          name: config
      volumes:
      - name: config
        configMap:
          name: lcm-config
