k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-lcm
  labels:
    app: lcm
spec:
  ports:
  - name: http
    port: 7321
    protocol: TCP
    targetPort: 7321
  selector:
    app: lcm
  type: ClusterIP
