k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-lcm
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: ssl-name
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: azure/application-gateway
  labels:
    app: lcm
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: k8s-lcm
          servicePort: 7321
        path: /
